--- a/teams-captions-saver/popup.html
+++ b/teams-captions-saver/popup.html
@@ -13,10 +13,8 @@
             align-items: center;
             justify-content: center;
             background-color: #f4f4f4;
-            height: 290px;
-            /* Adjust as needed */
-            width: 320px;
-            /* Adjust as needed */
+            height: 350px; /* Increased to accommodate new dropdown */
+            width: 320px; /* Adjust as needed */
         }
 
         button {
@@ -42,10 +40,24 @@
         #saveButton:hover {
             background-color: #1e7e34;
         }
+
         span {
             font-size: 12px;
             color: #6c757d;
-            padding:30px;
+            padding: 30px;
+        }
+
+        select {
+            margin: 10px;
+            padding: 8px;
+            font-size: 14px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+
+        label {
+            font-size: 14px;
+            margin-top: 10px;
         }
     </style>
     <script src="popup.js" defer></script>
@@ -55,6 +67,11 @@
     <h2 id="popup-header">Captions Saver v3</h2>
     <h3><i>New Teams Only</i></h3>
     <span>To start, click More > Language and Speech > Turn on live captions</span>
+    <label for="saveOption">Save Captions Option:</label>
+    <select id="saveOption">
+        <option value="auto">Save Automatically to Downloads</option>
+        <option value="ask">Ask for Location (Save As)</option>
+    </select>
     <button id="saveButton">Save Captions</button>
 </body>
 
