--- a/teams-captions-saver/popup.html
+++ b/teams-captions-saver/popup.html
@@ -170,7 +170,13 @@
 			</label>
 			<label for="leaveTriggerToggle">Save captions when clicking "Leave" button</label>
 		</div>
-    </div>
+
+			     <!-- Directory Setting -->
+			     <div class="setting-title">Save Directory:</div>
+			     <input type="text" id="directoryInput" placeholder="Choose Directory" style="width: 80%; margin-bottom: 10px;">
+			     <button id="chooseDirectoryButton">Choose Directory</button>
+			     <p id="directoryStatus"></p>
+			 </div>
 </body>
 
 </html>
